--- a/base/responsibility/responsibility.css
+++ b/base/responsibility/responsibility.css
@@ -20,14 +20,28 @@
     }
 }
 
+@media screen and (max-height: 735px) {
+    .introduction{
+        padding: 1rem 2rem !important;
+    }
+
+    .introduction-img{
+        width: 15rem;
+        height: 15rem;
+        object-fit: contain;
+    }
+}
+
+@media screen and (max-height: 435px) {
+    .introduction-img{
+        display: none !important;
+    }
+}
+
 @media screen and (max-width: 800px) {
     .introduction-parent{
         left: 0 !important;
         width: 100% !important;
-    }
-
-    .left-side{
-        box-shadow: 0px 4px 10px black;
     }
 }
 
