--- a/base/variables/animations.css
+++ b/base/variables/animations.css
@@ -170,6 +170,7 @@
     animation-name: ls-fw;
     animation-duration: .3s;
     animation-fill-mode: forwards;
+    box-shadow: 0px;
 }
 
 @keyframes ls-fw {
@@ -185,6 +186,7 @@
     animation-name: ls-bw;
     animation-duration: .3s;
     animation-fill-mode: backwards;
+    box-shadow: 0px 4px 10px black;
 }
 
 @keyframes ls-bw {
