--- a/base/style.css
+++ b/base/style.css
@@ -657,7 +657,7 @@ input:checked + .slider:before {
 
 .profile-settings-content{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     width: 100vw;
     height: 100vh;
@@ -677,12 +677,11 @@ input:checked + .slider:before {
     width: 650px;
     color: white;
     height: 90%;
-    background-color: #212138;
     border-radius: 20px;
+    /* box-shadow: 0 0 20px black; */
 }
 
 .settings-menu{
-    background-color: #575656;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -716,10 +715,12 @@ input:checked + .slider:before {
 .settings-menu section{
     padding: 10px;
     cursor: pointer;
+    color: rgb(219, 219, 219);
 }
 
 .settings-menu section:hover{
     background-color: rgb(107, 107, 107);
+    border-radius: 1rem;
 }
 
 .settings-content{
@@ -731,7 +732,6 @@ input:checked + .slider:before {
 
 .settings-header{
     text-align: center;
-    background-color: #8099ad;
     width: 100%;
 }
 
@@ -982,12 +982,9 @@ input:checked + .slider:before {
 .friends-div{
     display: flex;
     flex-direction: column;
-    border: 2px solid rgb(0, 0, 0);
-    box-shadow: 0 0 10px black;
     width: 650px;
     color: white;
     height: 90%;
-    background-color: var(--text-color-light);
     border-radius: .3rem;
 }
 
@@ -1173,6 +1170,25 @@ input:checked + .slider:before {
     justify-content: center;
 }
 
+.friendsTabSwitcher button{
+    border: 0;
+}
+
+.friendsTabSwitcher button.main-dark:hover{
+    background: rgb(68, 68, 68);
+}
+
+.friendsTabSwitcher button.main-light:hover{
+    background: rgb(211, 211, 211);
+}
+
+.settings-content.side-light .settings-header{
+    background: rgb(228, 228, 228)
+}
+
+.settings-content.side-dark .settings-header{
+    background: rgb(57, 57, 57);
+}
 
 .own{
     font-weight: bold;
