--- a/base/style.css
+++ b/base/style.css
@@ -280,31 +280,6 @@ body {
     background-color: var(--login-box-dark);
 }
 
-@media(max-width:600px){
-
-    .wrapperLight ,.wrapperDark{
-        background-image: none;
-    }
-    .wrapper{
-        align-items: start;
-    }
-    .login{
-        flex-direction: column;
-        background:none;
-        opacity: 1;
-    }
-    .theme-selector{
-        top: 8rem;
-        left: -5rem;
-    }
-}
-@media(max-width:400px){
-    .wrapper{
-        max-width: 200px;
-        left: 2rem;
-    }
-
-}
 /* Theme*/
 
 .theme-selector {
@@ -600,14 +575,12 @@ body{
     height: 34px;
 }
   
-  /* Hide default HTML checkbox */
 .switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
   
-  /* The slider */
 .slider {
     position: absolute;
     cursor: pointer;
@@ -633,7 +606,7 @@ body{
 }
   
 input:checked + .slider {
-    background-color: #2196F3;
+    background-color: #06080a;
 }
   
 input:focus + .slider {
@@ -646,7 +619,6 @@ input:checked + .slider:before {
     transform: translateX(26px);
 }
   
-  /* Rounded sliders */
 .slider {
     border-radius: 34px;
 }
@@ -997,12 +969,12 @@ input:checked + .slider:before {
 }
 
 .loggedInUser{
-    color: greenyellow;
+    color: green;
     text-align: center;
 }
 
 .loggedOutUser{
-    color: red;
+    color: rgb(236, 2, 2);
     text-align: center;
 }
 
@@ -1226,7 +1198,7 @@ input:checked + .slider:before {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-color: rgb(97, 102, 128);
+    background-color: inherit;
     padding: 10px 10px 5px 10px;
     border-radius: 10px;
     margin-top: 10px;
@@ -1324,4 +1296,8 @@ input:checked + .slider:before {
     font-weight: bold;
 }
 
-
+#theme{
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
